--- a/render.yaml
+++ b/render.yaml
@@ -6,5 +6,5 @@ services:
     buildCommand: go build -o main .
     startCommand: ./main
     envVars:
-      - key: DATABASE_URL
+      - key: postgresql://neondb_owner:npg_K2FJuC6zpiNO@ep-wandering-tree-a28tfjaf-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
         sync: false
